Prevent scrollbars by  adjusting CSS

--- a/snake.css
+++ b/snake.css
@@ -19,3 +19,10 @@
 p{
     font-size: smaller;
 }
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+}
